# dyson-swarm

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  config.example.toml
.cargo/: audit.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml  build.rs
crates/core/migrations/: equivalence.toml
crates/core/migrations/postgres/: 0001_init.sql  0012_audit_completion.sql  0018_instance_webhooks.sql  0019_webhook_delivery_body.sql  0020_artefact_shares.sql  0021_artefact_cache.sql  0022_instance_state_files.sql  0023_persistent_webhook_deliveries.sql  0023_webhook_secrets_user_scope.sql  0024_mcp_docker_catalog.sql  0024_proxy_token_lookup.sql  0025_mcp_docker_catalog_placeholders.sql  0026_drop_instance_secrets.sql  0027_mcp_docker_catalog_status.sql  0028_webhook_signature_header.sql  0030_mcp_docker_catalog_status.sql  0031_skill_marketplace_sources.sql  0032_skill_marketplace_remove_file.sql  0033_instance_state_generation.sql  0034_instance_state_file_bodies.sql  0035_drop_state_file_body_path.sql  0036_artefact_cache_bodies.sql  0037_drop_artefact_cache_body_path.sql  0038_prune_bodyless_state_rows.sql  0039_mcp_audit.sql  0040_admin_audit.sql  0041_sessions.sql  0042_proxy_token_source_ip.sql  0045_data_driven_webhook_verifier.sql  0046_webhook_preset_id.sql  0048_instance_channel_allowed_senders.sql  0051_agent_secrets.sql  0052_remove_legacy_webhook_verifiers.sql
crates/core/migrations/sqlite/: 0023_persistent_webhook_deliveries.sql  0025_webhook_secrets_user_scope.sql  0026_mcp_docker_catalog.sql  0028_webhook_signature_header.sql  0030_mcp_docker_catalog_status.sql  0032_skill_marketplace_remove_file.sql  0034_instance_state_file_bodies.sql  0036_artefact_cache_bodies.sql  0037_drop_artefact_cache_body_path.sql  0045_data_driven_webhook_verifier.sql  0051_agent_secrets.sql  0052_remove_legacy_webhook_verifiers.sql
crates/core/src/: agent_secrets.rs  api_client.rs  artefacts.rs  channels.rs  config.rs  cube_client.rs  dyson_reconfig.rs  envelope.rs  http.rs  instance.rs  instance_client.rs  kms_local.rs  lib.rs  mcp_servers.rs  network_policy.rs  openrouter.rs  policy.rs  probe.rs  secrets.rs  skill_inventory.rs  skill_marketplace.rs  snapshot.rs  state_files.rs  traits.rs  ttl.rs  upstream_policy.rs  webhooks.rs
crates/core/src/backup/: s3.rs
crates/core/src/db/: artefacts.rs  audit.rs  instances.rs  mcp_catalog.rs  mod.rs  runtime_migrations.rs  secrets.rs  shares.rs  skill_marketplace.rs  snapshots.rs  state_files.rs  tokens.rs  transfer.rs  webhooks.rs
crates/core/src/db/pg/: admin_audit.rs  agent_secrets.rs  artefacts.rs  audit.rs  channels.rs  instances.rs  mcp_audit.rs  mcp_catalog.rs  mod.rs  policies.rs  secrets.rs  sessions.rs  shares.rs  skill_marketplace.rs  snapshots.rs  state_files.rs  tokens.rs  users.rs  webhooks.rs
crates/core/src/db/sqlite/: agent_secrets.rs  artefacts.rs  audit.rs  channels.rs  instances.rs  mcp_catalog.rs  mod.rs  policies.rs  runtime_migrations.rs  secrets.rs  sessions.rs  shares.rs  skill_marketplace.rs  snapshots.rs  state_files.rs  tokens.rs  users.rs  webhooks.rs
crates/core/src/instance/: env.rs  mcp_reconcile.rs  tests.rs  types.rs
crates/core/src/shares/: mod.rs  service.rs
crates/core/tests/fixtures/webhooks/agentmail/: README.md  request.txt  secret.txt
crates/core/tests/fixtures/webhooks/github/: README.md
crates/core/tests/fixtures/webhooks/shopify/: README.md  request.txt
crates/core/tests/fixtures/webhooks/slack/: README.md
crates/core/tests/fixtures/webhooks/standard/: README.md
crates/core/tests/fixtures/webhooks/stripe/: README.md
crates/mcp-runtime/: Cargo.toml
crates/mcp-runtime/src/: main.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: main.rs
crates/swarm/src/auth/: bearer.rs  oidc.rs  user.rs
crates/swarm/src/http/: admin_users.rs  agent_secrets.rs  auth_config.rs  auth_session.rs  byok.rs  channels.rs  dyson_proxy.rs  instance_artefacts.rs  instances.rs  internal_ingest.rs  internal_state.rs  mod.rs  proxy_admin.rs  secrets.rs  share_public.rs  shares.rs  skill_marketplace.rs  static_assets.rs  tool_calls.rs  webhooks.rs
crates/swarm/src/http/web/src/: routing.js  routing.test.js
crates/swarm/src/http/web/src/api/: audit.js  auth.js  auth.test.js  client.js  client.test.js
crates/swarm/src/http/web/src/components/: activity.jsx  activity.test.jsx  admin.jsx  admin.test.jsx  app.jsx  artefacts.jsx  artefacts.test.jsx  artifacts.jsx  artifacts.test.jsx  byok.jsx  edit_form.test.jsx  instances.jsx  instances.test.js  json-editor.jsx  json-editor.test.jsx  markdown.jsx  shares.jsx  shares.test.jsx  skills.jsx  skills.test.jsx  splash.jsx  tasks.jsx  tasks.test.jsx  topbar.jsx  topbar.test.jsx  ui.jsx  webhookPresets.js
crates/swarm/src/http/web/src/store/: app.js  app.test.js  production-routing.test.js
crates/swarm/src/http/web/src/styles/: layout.css  mobile-inputs.test.js  panels.css  tokens.css
crates/swarm/src/http/web/src/utils/: format.js
crates/swarm/src/proxy/: http.rs  mcp.rs  mod.rs  recording_body.rs  telegram.rs  upstream_policy.rs
crates/swarm/src/proxy/mcp/: errors.rs  redaction.rs  runtime.rs  stream.rs  tests.rs  tools.rs
crates/swarm/tests/: e2e_mock_cube.rs  integration_extra.rs  share_flow.rs
docs/: README.md  architecture-overview.md  artefacts.md  audit.md  auth-and-keys.md  configuration.md  controllers.md  database-backends.md  llm-proxy.md  mcp-and-oauth.md  multiple-databases.md  operations.md  restore-and-clone.md  shares.md  state-ownership.md  storage-and-secrets.md
migrations/postgres/: 0001_init.sql  0002_multitenant.sql  0003_audit_owner.sql  0005_instance_rotated_to.sql  0017_instance_tools.sql  (+4 more)
src/: api_client.rs  artefacts.rs  cli.rs  config.rs  cube_client.rs  dyson_reconfig.rs  envelope.rs  error.rs  instance.rs  instance_client.rs  instance_id.rs  lib.rs  logging.rs  main.rs  mcp_servers.rs  network_policy.rs  openrouter.rs  probe.rs  secrets.rs  snapshot.rs  traits.rs  ttl.rs  webhooks.rs
tests/: backup_s3_minio.rs  e2e_mock_cube.rs  integration_extra.rs  share_flow.rs
(+100 files in other folders)
