[package]
name = "dyson-warden"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Orchestration server for Dyson agents in CubeSandbox MicroVMs"
license = "MIT"
publish = false

[lib]
name = "dyson_warden"
path = "src/lib.rs"

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "matched-path"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "macros", "signal", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
rust-s3 = { version = "0.34", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "json"] }
thiserror = "1"
uuid = { version = "1", default-features = false, features = ["v4", "serde"] }
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["std"] }
jsonwebtoken = { version = "9", default-features = false }
age = { version = "0.10", default-features = false, features = ["armor"] }
# argon2id for the per-instance configure secret (Stage 8) — warden
# generates a plaintext on instance create, sends it to dyson on every
# /api/admin/configure call; dyson stores the argon2id hash on its
# disk on first call (TOFU) and verifies on subsequent calls.  Same
# crate dyson already uses for its bearer-auth hashing path.
argon2 = "0.5"
# CSPRNG for fresh api-key tokens (Stage 4).  Dev-deps already pulled
# this in; promoting to a runtime dep so mint_api_key can use it
# directly without hand-rolling a getrandom wrapper.
rand = "0.8"

[features]
default = []
# Postgres backend stub. Enable to compile the (currently empty) `db::pg`
# module skeleton. The actual Pg store impls are deferred — phase 7 ships
# the seam, not the implementation.
postgres = ["sqlx/postgres"]

[dev-dependencies]
# Used only by the OIDC test to mint a fresh RSA keypair + sign mock JWTs.
# Not a runtime dep — production OIDC verification only uses the public key
# delivered via JWKS.
rsa = { version = "0.9", default-features = false, features = ["std", "pem"] }
base64 = "0.22"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
