[workspace]
members = [
    "crates/core",
    "crates/swarm",
    "crates/cli",
    "crates/egress-proxy",
    "crates/mcp-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace.dependencies]
# Versions are pinned to the current minor — Cargo.lock pins exact patch.
# Bumping a minor is a deliberate operation; SemVer-major bumps require
# a code review and a security/breakage check.
age = { version = "0.10.1", default-features = false, features = ["armor"] }
ammonia = "4"
async-trait = "0.1.89"
axum = { version = "0.7.9", default-features = false, features = ["http1", "json", "tokio", "matched-path"] }
base64 = "0.22.1"
bytes = "1.11.1"
clap = { version = "4.6", default-features = false, features = ["derive", "std", "help", "usage"] }
futures = { version = "0.3.32", default-features = false, features = ["std"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
hmac = { version = "0.12", default-features = false, features = ["std"] }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", default-features = false, features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.20", default-features = false, features = ["tokio"] }
jsonwebtoken = { version = "10.3", default-features = false, features = ["rust_crypto"] }
libc = "0.2"
parking_lot = "0.12"
postcard = { version = "1.0", default-features = false, features = ["use-std"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
rand = "0.8.6"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json", "stream"] }
rsa = { version = "0.9.10", default-features = false, features = ["std", "pem"] }
rust-s3 = { version = "0.37.1", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = { version = "0.10", default-features = false, features = ["std"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
subtle = { version = "2.6", default-features = false }
tempfile = "3.27"
thiserror = "1.0.69"
tokio = { version = "1.52", default-features = false, features = ["rt-multi-thread", "net", "macros", "signal", "sync", "fs", "io-util", "time"] }
toml = { version = "0.8.23", default-features = false, features = ["parse"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "env-filter", "json"] }
uuid = { version = "1.23", default-features = false, features = ["v4", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

# Lint policy.  Pedantic is on; the categories below are allowed because
# they're pure stylistic nits ("missing backticks", "missing # Errors
# section", "could have #[must_use]") on this codebase, ~200 hits with
# no runtime impact.  The substantive pedantic checks — cast safety,
# allocation, match-arm dedup, manual_let_else — stay on.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
needless_pass_by_value = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
assigning_clones = "allow"
await_holding_lock = "allow"
collapsible_match = "allow"
doc_overindented_list_items = "allow"
elidable_lifetime_names = "allow"
enum_glob_use = "allow"
explicit_iter_loop = "allow"
format_push_string = "allow"
ignored_unit_patterns = "allow"
io_other_error = "allow"
items_after_statements = "allow"
let_unit_value = "allow"
manual_clamp = "allow"
manual_is_variant_and = "allow"
manual_let_else = "allow"
manual_pattern_char_comparison = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
needless_continue = "allow"
redundant_closure_for_method_calls = "allow"
semicolon_if_nothing_returned = "allow"
single_match_else = "allow"
uninlined_format_args = "allow"
unnested_or_patterns = "allow"
unnecessary_trailing_comma = "allow"
unnecessary_lazy_evaluations = "allow"
unnecessary_map_or = "allow"
used_underscore_binding = "allow"
