[package]
name = "dyson-swarm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Operator CLI for Dyson Swarm"
license.workspace = true
publish.workspace = true

[lib]
name = "dyson_swarm_cli"
path = "src/lib.rs"

[[bin]]
name = "swarmctl"
path = "src/main.rs"

[dependencies]
dyson-swarm-core = { path = "../core" }

clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[lints]
workspace = true
