[package]
name = "dyson-swarm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core Dyson Swarm domain logic and persistence"
license.workspace = true
publish.workspace = true

[lib]
name = "dyson_swarm_core"
path = "src/lib.rs"

[features]
default = ["full"]
full = [
    "dep:age",
    "dep:ammonia",
    "dep:base64",
    "dep:hex",
    "dep:hmac",
    "dep:http",
    "dep:parking_lot",
    "dep:postcard",
    "dep:pulldown-cmark",
    "dep:rand",
    "dep:reqwest",
    "dep:rust-s3",
    "dep:serde_json",
    "dep:sha2",
    "dep:sqlx",
    "dep:subtle",
    "dep:toml",
    "dep:tracing",
    "dep:uuid",
]
postgres = ["full", "sqlx/postgres"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

age = { workspace = true, optional = true }
ammonia = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
http = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rust-s3 = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true

[lints]
workspace = true
