[package]
name = "dyson-mcp-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Docker-backed stdio MCP runtime helper for Dyson Swarm"
license.workspace = true
publish.workspace = true

[[bin]]
name = "dyson-mcp-runtime"
path = "src/main.rs"

[dependencies]
dyson-swarm-core = { path = "../core" }

clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
