[package]
name = "dyson-swarm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HTTP orchestration server for Dyson agents in CubeSandbox MicroVMs"
license.workspace = true
publish.workspace = true
build = "build.rs"

[lib]
name = "dyson_swarm"
path = "src/lib.rs"

[[bin]]
name = "swarm"
path = "src/main.rs"

[dependencies]
dyson-swarm-core = { path = "../core" }

async-trait.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
rand.workspace = true
rsa.workspace = true
sqlx.workspace = true
tempfile.workspace = true

[lints]
workspace = true
